--- a/html/killmouse.html
+++ b/html/killmouse.html
@@ -14,7 +14,7 @@
 				border: 2px solid white;
 				background: black;
 				margin: 150px 150px;
-				/*position: relative;*/
+				cursor: pointer;
 			}		
 			#box>img{
 				width: 200px;
